--- a/style.css
+++ b/style.css
@@ -4,12 +4,11 @@ body {
   height: 100px;
 }
 
-h1 {
+/*h1 {
   color: cornflowerblue;
   transition: color 0.5s ease-in-out;
-  position: relative;
-  z-index: 2;
-}
+ 
+}*/
 
 .clicked {
   color: tomato;
@@ -26,6 +25,7 @@ h1 {
   font-family: "Whisper", cursive;
   position: relative;
   z-index: 2;
+  font-weight: 700;
 }
 
 #greeting {
@@ -33,20 +33,25 @@ h1 {
   justify-content: center;
   align-items: center;
   font-family: "Whisper", cursive;
-  font-size: 60px;
+  font-size: 100px;
   position: relative;
   z-index: 2;
+  font-weight: 700;
+  color: black;
 }
 
 #login-form {
   text-align: center;
   position: relative;
   z-index: 2;
+  font-weight: 700;
+  color: black;
 }
 #login-form-input {
   border: 0;
   background: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  color: black;
+  border-bottom: 1px solid;
   width: 500px;
   height: 100px;
   font-size: 70px;
@@ -54,12 +59,14 @@ h1 {
   font-family: "Whisper", cursive;
   position: relative;
   z-index: 2;
+  font-weight: 700;
 }
 
 #todo-form {
   text-align: center;
   position: relative;
   z-index: 2;
+  font-weight: 700;
 }
 #todo-form-input {
   border: 0;
@@ -72,12 +79,14 @@ h1 {
   font-family: "Whisper", cursive;
   position: relative;
   z-index: 2;
+  font-weight: 700;
 }
 #todo-list {
   text-align: center;
   list-style: none;
   position: relative;
   z-index: 2;
+  font-weight: 700;
 }
 #todo-list li {
   text-align: center;
@@ -85,20 +94,31 @@ h1 {
   font-size: 50px;
   position: relative;
   z-index: 2;
+  font-weight: 700;
 }
 
 #quote {
   text-align: center;
   font-size: 30px;
+  font-weight: 700;
   font-family: "Whisper", cursive;
   position: relative;
   z-index: 2;
 }
+
+#weather {
+  text-align: center;
+  font-size: 30px;
+  font-family: "Whisper", cursive;
+  position: relative;
+  z-index: 2;
+  font-weight: 700;
+}
 img {
   position: absolute;
   z-index: 1;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: flex;
   top: 0;
   left: 0;
